@@ -1,4 +1,5 @@
 0.03
+ - Update Module::Install to 1.16 version.
 
 0.02 2015-03-22T01:14:29+01:00
  - Fix dependencies for PYX::Parser.
